--- a/myproject/docker-compose.yml
+++ b/myproject/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.9'
 
 services:
   web:
@@ -6,8 +6,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
+      - .:/app
       - ./media:/app/media
-      - ./staticfiles:/app/staticfiles
     environment:
       - DEBUG=1
-    restart: unless-stopped
