--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,7 +1,4 @@
-Django>=5.0
-gunicorn
-reportlab
-djangorestframework
-channels==4.1.0
-channels-redis==4.2.0
-whitenoise
+Django>=5.0,<5.3
+gunicorn>=20.0.0
+Pillow>=9.0.0
+whitenoise>=6.0.0
